added HTML layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<p>Laura Fallert</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My Plant Journey</title>
+    </head>>
+        <body>
+            <header>
+                <h1>My Plant Journey - By Laura Fallert</h1>
+            </header>
+            <main>
+                <article>
+                    <section>
+                        <h2>How It Started</h2>
+                        <p> Text about how it got started, blah blah blah</p>
+                        
+                    </section>
+                    <section>
+                        <h2>How It's Going, or...Meet my Plants!</h2>
+                        <img src=images/Garden.jpg width="500" height="600">
+                        <!--Text here that says 'Family Photo'-->
+                        <p>I have many plants! Here's a spotlight of some of favorites.</p>
+                    </section>
+                    <section>
+                        <h3>Lavender</h3>
+                        <img src=images/Lavender.jpg width="500" height="600">
+                        <!--Text here that says this guy is a bugger-->
+                        <p>Elaborate on why lavender is a bugger, but why its your favorite</p>
+                    </section>
+                    <section>
+                        <h3>Basil</h3>
+                        <img src=images/Basil.jpg width="500" height="600">
+                        <!--Text here that says how excited I am to try this guy-->
+                        <p>Text here about how the basil grows fast, and is kicking the oregano out</p>
+                    </section>
+                    <section>
+                        <h3>Petunias</h3>
+                        <img src=images/Petunias.JPG width="500" height="600">
+                        <!--Text here that says Petunias from the angle I always see them-->
+                        <p>Text here about how pretty these are, maybe how I almost killed them.</p>
+                    </section>
+                    <section>
+                        <h3>Tomatos</h3>
+                        <img src=images/Tomato.JPG width="500" height="600">
+                        <!--Text here that says "Growing in Nicely"-->
+                        <p>Text here about how thirsty this plant is, makes its needs known</p>
+                    </section>
+                </article>
+                
+            </main>
+            <footer> Insert footer here </footer>
+        </body>
+</html>
