finished content, started css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>My Plant Journey</title>
-    </head>>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
         <body>
             <header>
                 <h1>My Plant Journey - By Laura Fallert</h1>
@@ -11,42 +12,53 @@
                 <article>
                     <section>
                         <h2>How It Started</h2>
-                        <p> Text about how it got started, blah blah blah</p>
-                        
+                        <p>The first plant that I remember was a rose bush that my mom helped me picked out when I was 10. I wanted roses because of the familiarity with the flower, not to mention their reputation as beautiful. But my interested only lasted as long as the summer. As I grew older and moved into my own place, I knew I wanted plants. But my first apartment had no outdoor space, and my cat enjoyed chomping on indoor plants too much. Last summer, when looking for a new place, I made it a must to have a place for plants. And this spring, I finally got to take advantage of that. I've got 14 pots with different flowers and plants and I am learning more and more about taking care of them everyday.</p> 
                     </section>
                     <section>
-                        <h2>How It's Going, or...Meet my Plants!</h2>
-                        <img src=images/Garden.jpg width="500" height="600">
-                        <!--Text here that says 'Family Photo'-->
-                        <p>I have many plants! Here's a spotlight of some of favorites.</p>
+                        <h2>And Now...How It's Going!</h2>
+                        <figure>
+                            <img src=images/Garden.jpg width="500" height="600">
+                            <figcaption>A Family Photo!</figcaption>
+                        </figure>
+                        <p>I have many plants that I want you to meet. Here's a spotlight of some of favorites.</p>
                     </section>
                     <section>
                         <h3>Lavender</h3>
-                        <img src=images/Lavender.jpg width="500" height="600">
-                        <!--Text here that says this guy is a bugger-->
-                        <p>Elaborate on why lavender is a bugger, but why its your favorite</p>
-                    </section>
-                    <section>
-                        <h3>Basil</h3>
-                        <img src=images/Basil.jpg width="500" height="600">
-                        <!--Text here that says how excited I am to try this guy-->
-                        <p>Text here about how the basil grows fast, and is kicking the oregano out</p>
+                        <figure>
+                            <img src=images/Lavender.jpg width="500" height="600">
+                            <figcaption>This lavender plant has seen better days.</figcaption>
+                        </figure>
+                        <p>I love <b>lavender</b>! I love the smell, the color! And it reminds me my favorite game of all time, Skyrim. So when I saw it at the store, I knew I had to have it. What I didn't know is that lavender is a total bugger. I thought all plants needed water. However, lavender loves arid climates as I was soon to learn. I overwatered the guy, and now its on a strict, no water, pure sunlight diet!</p>
+                        <a href="https://www.sunset.com/garden/flowers-plants/guide-planting-care-harvesting-lavender#:~:text=Lavender%20Care&text=Plant%20lavender%20in%20full%20sun,every%20year%20immediately%20after%20bloom." target="_blank">Hey! Here's some tips on how <em>now</em> to dry out your lavender!</a>
                     </section>
                     <section>
                         <h3>Petunias</h3>
-                        <img src=images/Petunias.JPG width="500" height="600">
-                        <!--Text here that says Petunias from the angle I always see them-->
-                        <p>Text here about how pretty these are, maybe how I almost killed them.</p>
+                        <figure>
+                            <img src=images/Petunias.JPG width="500" height="600">
+                            <figcaption>There's just something about this shade of purple.</figcaption>
+                        </figure>                           
+                        <p>Ah, the <b>petunia</b>, such a beautiful and simple flower. That shade of purple just lights up when the sunlight hits them just right. I love that these flowers hang in a basket. Something about seeing them on my deck that way makes me feel like a real gardener. And even now, as I sit on my couch making this website, I'm admiring them. </p>
+                    </section>
+                    <section>
+                        <h3>Basil</h3>
+                        <figure>
+                            <img src=images/Basil.jpg width="500" height="600">
+                            <figcaption>This basil is growing so fast and ready for harvest!</figcaption>
+                        </figure>                
+                        <p>And here's <b>basil</b>. My boyfriend was most excited about growing some herbs that we can use in our kitchen, and I was excited too. I was surprised how fast the basil is growing. It's hard to believe there is oregano in this plant too! Growing these together makes them <em>companion&nbsp;plants</em>, which attracts the right kind of insects to make both grow. Plants are so cool!</p>
+                        <a href="https://www.masterclass.com/articles/basil-companion-planting-guide" target="_blank">Check out some more great companion plants for basil here!</a>
                     </section>
                     <section>
                         <h3>Tomatos</h3>
-                        <img src=images/Tomato.JPG width="500" height="600">
-                        <!--Text here that says "Growing in Nicely"-->
-                        <p>Text here about how thirsty this plant is, makes its needs known</p>
+                        <figure>
+                            <img src=images/Tomato.JPG width="500" height="600">
+                            <figcaption>Growing in nicely.</figcaption>
+                        </figure>                        
+                        <p><b>Tomatoes</b>! My mom gave me this plant, so I always update her on how its growing. It started with one small little tomato, and now there is close to 20! One thing that surprised me about the tomato plant is how it makes its needs known. Forget to water it one day and it will start to droop. And as soon as you water it, it will immediately perk back up.</p>
                     </section>
                 </article>
                 
             </main>
-            <footer> Insert footer here </footer>
+            <footer>This has been a plant production.</footer>
         </body>
 </html>
