--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>My Plant Journey</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">    
     </head>
         <body>
             <header>
@@ -10,55 +12,56 @@
             </header>
             <main>
                 <article>
-                    <section>
+                    <section class="intro">
                         <h2>How It Started</h2>
-                        <p>The first plant that I remember was a rose bush that my mom helped me picked out when I was 10. I wanted roses because of the familiarity with the flower, not to mention their reputation as beautiful. But my interested only lasted as long as the summer. As I grew older and moved into my own place, I knew I wanted plants. But my first apartment had no outdoor space, and my cat enjoyed chomping on indoor plants too much. Last summer, when looking for a new place, I made it a must to have a place for plants. And this spring, I finally got to take advantage of that. I've got 14 pots with different flowers and plants and I am learning more and more about taking care of them everyday.</p> 
+                        <p id="intro">Today, I want to take you on a short journey. One where we start with my earliest memories of gardening, leading up til now. My first plant was a rose bush that my mom helped me picked out when I was 10. I&nbsp;wanted roses because of the familiarity with the flower, not to mention their reputation as beautiful. But my interested only lasted as long as the summer. As I grew older and moved into my own place, I knew I wanted plants. But my first apartment had no outdoor space, and my cat enjoyed chomping on indoor plants too much. Last summer, when looking for a new place, I made it a must to have a place for plants. And this spring, I finally got to take advantage of that. I've got 14 pots with different flowers and plants and I am learning more and more about taking care of them everyday.</p> 
+                        
                     </section>
-                    <section>
+                    <hr>
+                    <section class="intro">
                         <h2>And Now...How It's Going!</h2>
                         <figure>
-                            <img src=images/Garden.jpg width="500" height="600">
-                            <figcaption>A Family Photo!</figcaption>
+                            <img id="garden-image" src=images/Garden.jpg>
                         </figure>
-                        <p>I have many plants that I want you to meet. Here's a spotlight of some of favorites.</p>
+                        <p id="center-align">I have many plants that I want you to meet. Here's a spotlight of some of favorites.</p>
                     </section>
-                    <section>
+                    <hr>
+                    <section class="plant-section">
                         <h3>Lavender</h3>
                         <figure>
-                            <img src=images/Lavender.jpg width="500" height="600">
-                            <figcaption>This lavender plant has seen better days.</figcaption>
+                            <img class="image-left" src=images/Lavender.jpg >
                         </figure>
-                        <p>I love <b>lavender</b>! I love the smell, the color! And it reminds me my favorite game of all time, Skyrim. So when I saw it at the store, I knew I had to have it. What I didn't know is that lavender is a total bugger. I thought all plants needed water. However, lavender loves arid climates as I was soon to learn. I overwatered the guy, and now its on a strict, no water, pure sunlight diet!</p>
-                        <a href="https://www.sunset.com/garden/flowers-plants/guide-planting-care-harvesting-lavender#:~:text=Lavender%20Care&text=Plant%20lavender%20in%20full%20sun,every%20year%20immediately%20after%20bloom." target="_blank">Hey! Here's some tips on how <em>now</em> to dry out your lavender!</a>
+                        <p class="intro">I love <b>lavender</b>! I love the smell, the color! And it reminds me of my favorite game of all time, Skyrim. When I saw it at the store, I knew I had to get it. What I didn't know is that lavender is a total bugger. I thought all plants needed water. However, lavender loves arid climates as I was soon to learn. I overwatered the guy, and now its on a strict, no water, pure sunlight diet!</p>
+                        <a href="https://www.sunset.com/garden/flowers-plants/guide-planting-care-harvesting-lavender#:~:text=Lavender%20Care&text=Plant%20lavender%20in%20full%20sun,every%20year%20immediately%20after%20bloom." target="_blank">Hey! Here's some tips on how <em>not</em> to dry out your lavender!</a>
                     </section>
-                    <section>
+                    <section class="plant-section">
                         <h3>Petunias</h3>
                         <figure>
-                            <img src=images/Petunias.JPG width="500" height="600">
-                            <figcaption>There's just something about this shade of purple.</figcaption>
+                            <img class="image-right" src=images/Petunias.JPG width="500" height="600">
                         </figure>                           
-                        <p>Ah, the <b>petunia</b>, such a beautiful and simple flower. That shade of purple just lights up when the sunlight hits them just right. I love that these flowers hang in a basket. Something about seeing them on my deck that way makes me feel like a real gardener. And even now, as I sit on my couch making this website, I'm admiring them. </p>
+                        <p class="intro">Ah, the <b>petunia</b>, such a beautiful and simple flower. That shade of purple just lights up when the sunlight hits them just right. I love that these flowers hang in a basket. Something about seeing them on my deck that way makes me feel like a real gardener. And even now, as I sit on my couch making this website, I'm admiring a small hummingbird as it flies in and out of the flowers.</p>
+                        <a href="https://www.almanac.com/content/plants-attract-hummingbirds" target="_blank">For even more plants that attract hummingbirds, go here!</a>
                     </section>
-                    <section>
+                    <section class="plant-section">
                         <h3>Basil</h3>
                         <figure>
-                            <img src=images/Basil.jpg width="500" height="600">
-                            <figcaption>This basil is growing so fast and ready for harvest!</figcaption>
+                            <img class="image-left" src=images/Basil.jpg width="500" height="600">
                         </figure>                
-                        <p>And here's <b>basil</b>. My boyfriend was most excited about growing some herbs that we can use in our kitchen, and I was excited too. I was surprised how fast the basil is growing. It's hard to believe there is oregano in this plant too! Growing these together makes them <em>companion&nbsp;plants</em>, which attracts the right kind of insects to make both grow. Plants are so cool!</p>
+                        <p class="intro">And here's <b>basil</b>. My boyfriend was most excited about growing some herbs that we can use in our kitchen, and I was excited too. I was surprised how fast the basil grows. It's hard to believe there is oregano in this plant too! Growing these together makes them <em>companion&nbsp;plants</em>, which attracts the right kind of insects to make both grow their best. Plants are so cool!</p>
                         <a href="https://www.masterclass.com/articles/basil-companion-planting-guide" target="_blank">Check out some more great companion plants for basil here!</a>
                     </section>
-                    <section>
-                        <h3>Tomatos</h3>
+                    <section class="plant-section">
+                        <h3>Tomatoes</h3>
                         <figure>
-                            <img src=images/Tomato.JPG width="500" height="600">
-                            <figcaption>Growing in nicely.</figcaption>
+                            <img class="image-right" src=images/Tomato.JPG width="500" height="600">
                         </figure>                        
-                        <p><b>Tomatoes</b>! My mom gave me this plant, so I always update her on how its growing. It started with one small little tomato, and now there is close to 20! One thing that surprised me about the tomato plant is how it makes its needs known. Forget to water it one day and it will start to droop. And as soon as you water it, it will immediately perk back up.</p>
+                        <p class="intro"><b>Tomatoes</b>! My mom gave me this plant, so I always update her on how its growing. It started with one small little tomato, and now there is close to 20! One thing that surprised me about the tomato plant is how it makes its needs known. Forget to water it one day and it will start to droop. And as soon as you water it, it will immediately perk back up. I can't wait for these beauties to fully ripen so I can use them in a salsa or pasta sauce recipe!</p>
+                        <a href="https://www.aspicyperspective.com/best-homemade-salsa-recipe/" target="_blank">Try this recipe when your tomatoes are ready!</a>
                     </section>
                 </article>
                 
             </main>
-            <footer>This has been a plant production.</footer>
+            <hr id="footer-hr">
+            <footer style=text-align:center>This has been a plant production.&copy</footer>
         </body>
 </html>
