--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <section class="intro">
                         <h2>And Now...How It's Going!</h2>
                         <figure>
-                            <img id="garden-image" src=images/Garden.jpg>
+                            <img id="garden-image" src=images/Garden.JPG>
                         </figure>
                         <p id="center-align">I have many plants that I want you to meet. Here's a spotlight of some of favorites.</p>
                     </section>
@@ -29,7 +29,7 @@
                     <section class="plant-section">
                         <h3>Lavender</h3>
                         <figure>
-                            <img class="image-left" src=images/Lavender.jpg >
+                            <img class="image-left" src=images/Lavender.JPG >
                         </figure>
                         <p class="intro">I love <b>lavender</b>! I love the smell, the color! And it reminds me of my favorite game of all time, Skyrim. When I saw it at the store, I knew I had to get it. What I didn't know is that lavender is a total bugger. I thought all plants needed water. However, lavender loves arid climates as I was soon to learn. I overwatered the guy, and now its on a strict, no water, pure sunlight diet!</p>
                         <a href="https://www.sunset.com/garden/flowers-plants/guide-planting-care-harvesting-lavender#:~:text=Lavender%20Care&text=Plant%20lavender%20in%20full%20sun,every%20year%20immediately%20after%20bloom." target="_blank">Hey! Here's some tips on how <em>not</em> to dry out your lavender!</a>
@@ -45,7 +45,7 @@
                     <section class="plant-section">
                         <h3>Basil</h3>
                         <figure>
-                            <img class="image-left" src=images/Basil.jpg width="500" height="600">
+                            <img class="image-left" src=images/Basil.JPG width="500" height="600">
                         </figure>                
                         <p class="intro">And here's <b>basil</b>. My boyfriend was most excited about growing some herbs that we can use in our kitchen, and I was excited too. I was surprised how fast the basil grows. It's hard to believe there is oregano in this plant too! Growing these together makes them <em>companion&nbsp;plants</em>, which attracts the right kind of insects to make both grow their best. Plants are so cool!</p>
                         <a href="https://www.masterclass.com/articles/basil-companion-planting-guide" target="_blank">Check out some more great companion plants for basil here!</a>
